Improvements frontend + tests
